--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-flash": "^0.1.1",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-session": "^1.18.0",
